--- a/src/axmed.html
+++ b/src/axmed.html
@@ -52,24 +52,9 @@
 
     </div>
 
-    <div class="max-w-300 m-auto flex flex-col gap-10 my-10 items-center">
+    <div class="max-w-300 m-auto flex flex-col gap-10 my-10 items-center p-5">
 
-        <div class="flex items-center justify-between gap-10">
-
-            <img src="./axmedd img/Image Placeholder.png" alt="">
-
-            <div class="flex flex-col gap-5 items-start">
-
-                <h1 class="text-3xl w-100">How to experience powerful education free of charge</h1>
-                <p class="flex items-center gap-2"> 3 May 2021 <img src="./axmedd img/Container (6).png" alt=""> 5 min read </p>
-                <p class="w-120">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla urna dolor quis enim, convallis vitae maecenas. Orci, erat enim adipiscing mattis elit nunc, sed facilisis. Enim, dui, diam sit at. Urna, sit sit eget placerat eget hendrerit consequat. Risus, cursus nibh aliquet facilisis laoreet sagittis quis. Aliquam amet, vel aliquam cursus aliquet pellentesque aenean. Sit vestibulum malesuada eget pharetra. Risus consequat bibendum dictum placerat convallis donec malesuada in porttitor. Sag</p>
-                <button class="bg-[#F72585] text-white px-6 py-2 rounded-[10px]">Read More</button>
-
-            </div>
-
-        </div>
-
-        <div class="flex items-center justify-between gap-10">
+        <div class="lg:flex block items-center justify-between gap-10">
 
             <img src="./axmedd img/Image Placeholder.png" alt="">
 
@@ -84,7 +69,7 @@
 
         </div>
 
-        <div class="flex items-center justify-between gap-10">
+        <div class="lg:flex block items-center justify-between gap-10">
 
             <img src="./axmedd img/Image Placeholder.png" alt="">
 
@@ -99,7 +84,22 @@
 
         </div>
 
-        <div class="flex items-center justify-between gap-10">
+        <div class="lg:flex block items-center justify-between gap-10">
+
+            <img src="./axmedd img/Image Placeholder.png" alt="">
+
+            <div class="flex flex-col gap-5 items-start">
+
+                <h1 class="text-3xl w-100">How to experience powerful education free of charge</h1>
+                <p class="flex items-center gap-2"> 3 May 2021 <img src="./axmedd img/Container (6).png" alt=""> 5 min read </p>
+                <p class="w-120">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla urna dolor quis enim, convallis vitae maecenas. Orci, erat enim adipiscing mattis elit nunc, sed facilisis. Enim, dui, diam sit at. Urna, sit sit eget placerat eget hendrerit consequat. Risus, cursus nibh aliquet facilisis laoreet sagittis quis. Aliquam amet, vel aliquam cursus aliquet pellentesque aenean. Sit vestibulum malesuada eget pharetra. Risus consequat bibendum dictum placerat convallis donec malesuada in porttitor. Sag</p>
+                <button class="bg-[#F72585] text-white px-6 py-2 rounded-[10px]">Read More</button>
+
+            </div>
+
+        </div>
+
+        <div class="lg:flex block items-center justify-between gap-10">
 
             <img src="./axmedd img/Image Placeholder.png" alt="">
 
@@ -115,6 +115,49 @@
         </div>
 
         <img src="./axmedd img/Pagination.png" alt="">
+
+    </div>
+
+    <div class="bg-[#021934]">
+
+        <div class="flex lg:items-start items-center max-w-300 m-auto justify-between text-white py-10 p-5">
+
+            <div class="flex flex-col gap-5 lg:items-start items-center">
+
+                <img src="./axmedd img/Logo (14).png" alt="">
+                <p class="w-110 lg:text-start text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet tristique placerat eleifend aliquam pellentesque facilisis ultrices. Imperdiet mus urna egestas at tellus. </p>
+
+            </div>
+
+            <div class="lg:flex lg:flex-col gap-5 hidden">
+
+                <h1 class="text-2xl">About us</h1>
+                <p>About</p>
+                <p>Courses</p>
+                <p>Mentors</p>
+                <p>Contact Us</p>
+
+            </div>
+
+            <div class="lg:flex lg:flex-col gap-5 hidden">
+
+                <h1 class="text-2xl">Support</h1>
+                <p>Careers</p>
+                <p>Help & Support</p>
+                <p>Blog</p>
+
+            </div>
+
+            <div class="lg:flex lg:flex-col gap-5 hidden">
+
+                <h1 class="text-2xl">Company</h1>
+                <p>Privacy Policy</p>
+                <p>Terms of Service</p>
+                <p>Code of Conduct</p>
+
+            </div>
+
+        </div>
 
     </div>
 
