--- a/src/idris.html
+++ b/src/idris.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="output.css">
 </head>
 <body>
-    
+      <header>
+        <nav class="flex justify-between">
+            <img src="./photo/Logo (8).png" alt="">
+            <div class="flex gap-25">
+            <p>Category</p>
+            <p>Become an Mentor</p>
+           <button class="p-1 border-solid border-[1px] border-black w-25 rounded-[5px]">Login</button>
+           <button class="bg-[#F72585] p-1 w-25 rounded-[5px] text-white">Sign Up</button>
+           </div>
+        </nav>
+        <div class="flex items-center gap-20 justify-evenly bg-[#021934] text-white p-10 mt-10">
+            <div>
+                <h1 class="font-bold text-[45px]">Find the Best <br> Courses and  <br> Amazing Mentor</h1>
+                <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit <br> amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus </p>
+                <input class="mt-5 border-solid border-[1px] border-white" type="text" placeholder="Type in the course you want to learn"> <button class="bg-[#F72585] text-white p-1 w-28 rounded-[5px]">Search</button>
+            </div>
+            <img class="w-120 " src="./photo/Image Place Holder.png" alt="">
+        </div>
+      </header>
+
+      
 </body>
 </html>
