--- a/src/idris.html
+++ b/src/idris.html
@@ -27,6 +27,73 @@
         </div>
       </header>
 
+      <h1 class="font-bold text-[35px] text-center">Trending Courses</h1>
       
+      <section>
+        <nav class="flex justify-evenly mt-10">
+            <p class="bg-[#F72585] text-white p-2 w-30 text-center">All</p>
+            <p class="text-[#AAAAAA]">Business</p>
+            <p class="text-[#AAAAAA]">Art & Design</p>
+            <p class="text-[#AAAAAA]">Development</p>
+            <p class="text-[#AAAAAA]">Marketing</p>
+        </nav>
+        
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+        <div class="mt-10 ">
+         <img src="./photo/Image Placeholder.png" alt="">
+         <h1 class="font-bold mt-3">Interpersonal skills - work better <br> with others!</h1>
+         <p class="text-[#F72585] mt-2">Tanah Air Team</p>
+         <img class="mt-2" src="./photo/Rating.png" alt="">
+         <p  class="font-bold mt-2">$384</p>
+        </div>
+      </section>
 </body>
 </html>
