--- a/src/Muhammadsoleh.html
+++ b/src/Muhammadsoleh.html
@@ -10,11 +10,11 @@
     <header>
         <nav class="flex items-center justify-between max-w-350 m-auto p-10 font-bold text-[20px]">
             <img src="./foto_muhammadsoleh/Logo.png" alt="">
-            <input class="py-3 px-10 pr-50 border border-solid border-black rounded-2xl" type="text" placeholder="Search bar">
-            <p>Category</p>
-            <p>Become an Mentor</p>
+            <input class="py-3 px-10 pr-50 border border-solid border-black rounded-2xl lg:block hidden" type="text" placeholder="Search bar">
+            <p class="lg:block hidden">Category</p>
+            <p class="lg:block hidden">Become an Mentor</p>
             <button class="px-10 py-3 border border-solid border-black rounded-2xl">Login</button>
-            <button class="px-10 py-3 bg-[#F72585] text-white rounded-2xl">Sign Up</button>
+            <button class="px-10 py-3 bg-[#F72585] text-white rounded-2xl lg:block hidden">Sign Up</button>
         </nav>
         <div class="max-w-350 m-auto p-10">
             <div>
@@ -24,7 +24,7 @@
                 <h1 class="text-[30px] font-bold">Most Popular Development Courses</h1>
             </div>
         </div>
-        <div class="flex items-center justify-between max-w-350 m-auto p-10">
+        <div class="lg:flex block items-center justify-between max-w-350 m-auto p-10">
             <img class="lg:block hidden" src="./foto_muhammadsoleh/Arrow Left.png" alt="">
             <div>
                 <img class="mb-7" src="./foto_muhammadsoleh/Image Placeholder.png" alt="">
@@ -61,17 +61,17 @@
             <img class="lg:block hidden" src="./foto_muhammadsoleh/Arrow Right.png" alt="">
         </div>
         <div>
-            <div class="flex items-center justify-between max-w-350 m-auto p-10">
+            <div class="lg:flex block items-center justify-between max-w-350 m-auto p-10">
                 <h1 class="text-[50px] font-bold">Programming Topics</h1> 
                 <button class="px-25 py-3 bg-[#F72585] text-white rounded-2xl">See All</button>
             </div>
-            <div class="flex items-center justify-between max-w-350 m-auto p-10">
+            <div class="lg:flex block items-center justify-between max-w-350 m-auto p-10">
                 <img class="mb-7" src="./foto_muhammadsoleh/Python.png" alt="">
                 <img class="mb-7" src="./foto_muhammadsoleh/Javascript.png" alt="">
                 <img class="mb-7" src="./foto_muhammadsoleh/CSS.png" alt="">
                 <img class="mb-7" src="./foto_muhammadsoleh/CSS.png" alt="">
             </div>
-            <div class="flex items-center justify-between max-w-350 m-auto p-10">
+            <div class="lg:flex block items-center justify-between max-w-350 m-auto p-10">
                 <img class="mb-7" src="./foto_muhammadsoleh/Web Development.png" alt="">
                 <img class="mb-7" src="./foto_muhammadsoleh/Data Science.png" alt="">
                 <img class="mb-7" src="./foto_muhammadsoleh/Java (1).png" alt="">
@@ -79,15 +79,15 @@
             </div>
         </div>
         <div>
-            <div class="flex items-center justify-between max-w-350 m-auto p-10">
+            <div class="lg:flex block items-center justify-between max-w-350 m-auto p-10">
                 <h1 class="text-[50px] font-bold">All Courses</h1>
                 <div class="flex gap-5 items-center">
                     <button class="flex gap-5 items-center px-10 py-3 bg-[#FFF5F9] text-[#F72585] rounded-2xl">Filter <img src="./foto_muhammadsoleh/dashboard.png" alt=""></button>
                     <button class="flex gap-5 items-center px-10 py-3 bg-[#F72585] text-white rounded-2xl">Most Popular <img src="./foto_muhammadsoleh/Arrow Chevron Right.png" alt=""></button>
                 </div>
             </div>
-            <div class="max-w-350 m-auto p-10 flex justify-between">
-                <div>
+            <div class="max-w-350 m-auto p-10 lg:flex block justify-between">
+                <div class="block">
                     <img class="mb-7" src="./foto_muhammadsoleh/Ratings.png" alt="">
                     <img class="mb-7" src="./foto_muhammadsoleh/Durations.png" alt="">
                     <img class="mb-7" src="./foto_muhammadsoleh/Categories.png" alt="">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="flex items-center gap-10 mb-10">
+                    <div class="lg:flex block items-center gap-10 mb-10">
                         <div>
                             <img class="mb-7" src="./foto_muhammadsoleh/Image Placeholder.png" alt="">
                             <button class="py-3 px-10 bg-[#4586D6] text-white rounded-2xl mb-7">Web Developer</button>
@@ -125,7 +125,7 @@
                             <p class="text-[20px] text-gray-400">$640  <span class="font-bold text-[20px] text-black">  $735</span></p>
                         </div>
                     </div>
-                    <div class="flex items-center gap-10 mb-10">
+                    <div class="lg:flex block items-center gap-10 mb-10">
                         <div>
                             <img class="mb-7" src="./foto_muhammadsoleh/Image Placeholder.png" alt="">
                             <button class="py-3 px-10 bg-[#4586D6] text-white rounded-2xl mb-7">Web Developer</button>
@@ -151,7 +151,7 @@
                             <p class="text-[20px] text-gray-400">$640  <span class="font-bold text-[20px] text-black">  $735</span></p>
                         </div>
                     </div>
-                    <div class="flex items-center gap-10 mb-10">
+                    <div class="lg:flex block items-center gap-10 mb-10">
                         <div>
                             <img class="mb-7" src="./foto_muhammadsoleh/Image Placeholder.png" alt="">
                             <button class="py-3 px-10 bg-[#4586D6] text-white rounded-2xl mb-7">Web Developer</button>
@@ -181,7 +181,7 @@
             </div>
         </div>
         <div class="bg-[#021934] p-10 text-white">
-        <div class="flex justify-between max-w-350 m-auto p-10">
+        <div class="lg:flex block justify-between max-w-350 m-auto p-10">
             <div>
                 <img class="mb-7" src="./foto_muhammadsoleh/Logo (1).png" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet <br> tristique placerat eleifend aliquam pellentesque facilisis <br> ultrices. Imperdiet mus urna egestas at tellus. </p>
@@ -206,8 +206,8 @@
                 <p class="mb-3">Code of Conduct</p>
             </div>
         </div>
-        <div class="flex justify-between max-w-350 m-auto p-10">
-            <div class="flex items-center gap-20">
+        <div class="lg:flex block justify-between max-w-350 m-auto p-10">
+            <div class="lg:flex block items-center gap-20">
                 <p>Privacy Policy</p>
                 <p>Terms and Condition</p>
             </div>
