--- a/src/idris.html
+++ b/src/idris.html
@@ -169,7 +169,7 @@
         <img class="w-200" src="./photo/Trusted Company.png" alt="">
       </div>
 
-     <h1 class="font-bold text-[30px]">The Latest Blog</h1>
+     <h1 class="font-bold text-[30px] ml-15 mt-10">The Latest Blog</h1>
       <section class="flex max-w-300 m-auto">
         <img class="w-100 " src="./photo/Blog 1.png" alt="">
         <img class="w-100 " src="./photo/Blog 2.png" alt="">
